libflipro/ubuntu/libflipro.h


typedef enum
{
	FPRO_CAM_DEVICE_TYPE_GSENSE400  = 0x01000400,
	FPRO_CAM_DEVICE_TYPE_GSENSE2020 = 0x01002020,
	FPRO_CAM_DEVICE_TYPE_GSENSE4040 = 0x01004040,
	FPRO_CAM_DEVICE_TYPE_GSENSE6060 = 0x01006060,
	FPRO_CAM_DEVICE_TYPE_KODAK47051 = 0x02047051,
	FPRO_CAM_DEVICE_TYPE_KODAK29050 = 0x02029050,
	FPRO_CAM_DEVICE_TYPE_DC230_42   = 0x03023042,
	FPRO_CAM_DEVICE_TYPE_DC230_84 = 0x03023084,
	FPRO_CAM_DEVICE_TYPE_DC4320 = 0x03004320,
	FPRO_CAM_DEVICE_TYPE_SONYIMX183 = 0x04000183
} FPRODEVICETYPE;
typedef enum
{
	FPRO_CONNECTION_USB,
	FPRO_CONNECTION_FIBRE,
} FPROCONNECTION;
typedef enum
{
	FPRO_USB_FULLSPEED,
	FPRO_USB_HIGHSPEED,
	FPRO_USB_SUPERSPEED
} FPROUSBSPEED;
typedef struct device_info_t
{
	wchar_t        cFriendlyName[FPRO_USB_STRING_MAXLEN];
	wchar_t        cSerialNo[FPRO_USB_STRING_MAXLEN];
	wchar_t        cDevicePath[FPRO_DEVICE_MAX_PATH_LENGTH];
	FPROCONNECTION eConnType;
	uint32_t       uiVendorId;
	uint32_t       uiProdId;
	FPROUSBSPEED   eUSBSpeed;
} FPRODEVICEINFO;
typedef struct device_version_info_t
{
	wchar_t cFirmwareVersion[FPRO_VERSION_STRING_MAXLEN];
	wchar_t cFPGAVersion[FPRO_VERSION_STRING_MAXLEN];
	wchar_t cControllerVersion[FPRO_VERSION_STRING_MAXLEN];
	wchar_t cHostHardwareVersion[FPRO_VERSION_STRING_MAXLEN];
} FPRODEVICEVERS;
typedef enum
{
	FLI_TESTIMAGE_TYPE_ROW,
	FLI_TESTIMAGE_TYPE_COL,
	FLI_TESTIMAGE_IMX183_VERTICAL,
	FLI_TESTIMAGE_IMX183_HORIZONTAL,
	FLI_TESTIMAGE_IMX183_ALL_LOW,
	FLI_TESTIMAGE_IMX183_ALL_HIGH,
	FLI_TESTIMAGE_IMX183_LOW_HIGH,
	FLI_TESTIMAGE_IMX183_HIGH_LOW
} FPROTESTIMAGETYPE;
typedef enum
{
	FLI_EXT_TRIGGER_FALLING_EDGE,
	FLI_EXT_TRIGGER_RISING_EDGE,
	FLI_EXT_TRIGGER_EXPOSE_ACTIVE_LOW,
	FLI_EXT_TRIGGER_EXPOSE_ACTIVE_HIGH
} FPROEXTTRIGTYPE;
typedef enum
{
	FPRO_DEBUG_NONE,
	FPRO_DEBUG_ERROR,
	FPRO_DEBUG_WARNING,
	FPRO_DEBUG_INFO,
	FPRO_DEBUG_DEBUG,
	FPRO_DEBUG_TRACE
} FPRODBGLEVEL;
typedef enum
{
	FPRO_GPS_NOT_DETECTED = 0,
	FPRO_GPS_DETECTED_NO_SAT_LOCK,
	FPRO_GPS_DETECTED_AND_SAT_LOCK
} FPROGPSSTATE;
typedef enum
{
	FPRO_SENSREAD_CB_BOTTOMLEFT = 0x01,
	FPRO_SENSREAD_CB_BOTTOMRIGHT = 0x02,
	FPRO_SENSREAD_CB_TOPLEFT = 0x04,
	FPRO_SENSREAD_CB_TOPRIGHT = 0x08,
	FPRO_SENSREAD_CB_ALL = 0x0F
} FPROSENSREADCFG;
typedef struct sensor_mode_t
{
	uint32_t uiModeIndex;
	wchar_t  wcModeName[FPRO_SENSOR_MODE_NAME_LENGTH];
} FPROSENSMODE;
typedef enum
{
	FPRO_GAIN_TABLE_LOW_CHANNEL,
	FPRO_GAIN_TABLE_HIGH_CHANNEL,
	FPRO_GAIN_TABLE_CHANNEL_NUM,
} FPROGAINTABLE;
typedef struct gain_value_t
{
	uint32_t uiValue;
	uint32_t uiDeviceIndex;
} FPROGAINVALUE;
typedef enum
{
	FPRO_BLACK_ADJUST_CHAN_LDR,
	FPRO_BLACK_ADJUST_CHAN_HDR,
} FPROBLACKADJUSTCHAN;
typedef struct camera_capabilities_t
{
	uint32_t uiSize;                      
	uint32_t uiCapVersion;                
	uint32_t uiDeviceType;                
	uint32_t uiMaxPixelImageWidth;        
	uint32_t uiMaxPixelImageHeight;       
	uint32_t uiAvailablePixelDepths;      
	uint32_t uiBinningsTableSize;         
	uint32_t uiBlackLevelMax;             
	uint32_t uiBlackSunMax;               
	uint32_t uiLowGain;                   
	uint32_t uiHighGain;                  
	uint32_t uiReserved;                  
	uint32_t uiRowScanTime;               
	uint32_t uiDummyPixelNum;             
	bool     bHorizontalScanInvertable;   
	bool     bVerticalScanInvertable;     
	uint32_t uiNVStorageAvailable;        
	uint32_t uiPreFrameReferenceRows;     
	uint32_t uiPostFrameReferenceRows;    
	uint32_t uiMetaDataSize;              
} FPROCAP;
typedef enum
{
	FPRO_AUXIO_1= 0x01,
	FPRO_AUXIO_2= 0x02,
	FPRO_AUXIO_3= 0x04,
	FPRO_AUXIO_4= 0x08,
} FPROAUXIO;
typedef enum
{
	FPRO_AUXIO_DIR_IN= 0,
	FPRO_AUXIO_DIR_OUT,
} FPROAUXIO_DIR;
typedef enum
{
	FPRO_AUXIO_STATE_LOW,
	FPRO_AUXIO_STATE_HIGH,
} FPROAUXIO_STATE;
typedef enum
{
	FPRO_AUXIO_EXPTYPE_EXPOSURE_ACTIVE= 0,
	FPRO_AUXIO_EXPTYPE_GLOBAL_EXPOSURE_ACTIVE,
	FPRO_AUXIO_EXPTYPE_FIRST_ROW_SYNC,
	FPRO_AUXIO_EXPTYPE_RESERVED
} FPROAUXIO_EXPACTIVETYPE;
typedef enum
{
	FPRO_STREAMER_STOPPED_ERROR = -1,
	FPRO_STREAMER_STOPPED= 0,
	FPRO_STREAMER_STREAMING,
} FPROSTREAMERSTATUS;
typedef struct fpro_stream_stats_t
{
	uint32_t            uiNumFramesReceived;
	uint64_t            uiTotalBytesReceived;
	uint64_t            uiDiskFramesWritten;
	double              dblDiskAvgMBPerSec;
	double              dblDiskPeakMBPerSec;
	double              dblOverallFramesPerSec;
	double              dblOverallMBPerSec;
	FPROSTREAMERSTATUS  iStatus;
	uint32_t            uiReserved;
} FPROSTREAMSTATS;
typedef enum
{
	FPRO_FRAMETYPE_NORMAL= 0,
	FPRO_FRAMETYPE_DARK,
	FPRO_FRAMETYPE_BIAS,
	FPRO_FRAMETYPE_LIGHTFLASH,
	FPRO_FRAMETYPE_DARKFLASH,
} FPRO_FRAME_TYPE;
typedef enum
{
	FPROCMS_1 = 0,
	FPROCMS_2,
	FPROCMS_4,
} FPROCMS;
typedef struct crop_rect_t
{
	uint32_t uiColumnOffset;
	uint32_t uiRowOffset;
	uint32_t uiWidth;
	uint32_t uiHeight;
} FPRO_CROP;
typedef enum
{
	FPROMERGE_ALGO = 0,
	FPROMERGE_ALGO_REF_FRAME,
} FPRO_MERGEALGO;
typedef struct unpacked_images_t
{
	uint8_t  *pMetaData;
	uint32_t uiMetaDataSize;
	bool     bMetaDataRequest;
	uint16_t *pLowImage;
	uint64_t uiLowImageSize;
	bool     bLowImageRequest;
	uint16_t *pHighImage;
	uint64_t uiHighImageSize;
	bool     bHighImageRequest;
	uint16_t *pMergedImage;
	uint64_t uiMergedImageSize;
	bool     bMergedImageRequest;
	FPRO_MERGEALGO eMergAlgo;
	FPRO_CROP cropRect;
	bool      bRequestCrop;
} FPROUNPACKEDIMAGES;
typedef struct int_point_t
{
	int32_t X;
	int32_t Y;
} FPROPOINT;
typedef struct pixel_info_t
{
	FPROPOINT ptPosition;
	uint32_t  uiValue;
} FPROPIXELINFO;
typedef struct image_plane_stats_t
{
	uint32_t uiLCutoff;
	uint32_t uiUCutoff;
	uint32_t uiHistogramSize;
	double   *pdblHistogram;
	double   dblMean;
	double   dblMedian;
	double   dblMode;
	double   dblStandardDeviation;
	FPROPIXELINFO pixBrightest;
	FPROPIXELINFO pixDimmest;
} FPROPLANESTATS;
typedef struct unpacked_stats_t
{
	FPROPLANESTATS statsLowImage;
	bool     bLowRequest;
	FPROPLANESTATS statsHighImage;
	bool     bHighRequest;
	FPROPLANESTATS statsMergedImage;
	bool     bMergedRequest;
} FPROUNPACKEDSTATS;
LIBFLIPRO_API FPROCam_GetCameraList(FPRODEVICEINFO *pDeviceInfo, uint32_t *pNumDevices);
LIBFLIPRO_API FPROCam_Open(FPRODEVICEINFO *pDevInfo, int32_t *pHandle);
LIBFLIPRO_API FPROCam_Close(int32_t iHandle);
LIBFLIPRO_API FPROCam_GetAPIVersion(wchar_t *pVersion, uint32_t uiLength);
LIBFLIPRO_API FPROCam_GetDeviceVersion(int32_t iHandle, FPRODEVICEVERS *pVersion);
LIBFLIPRO_API FPROFrame_CaptureAbort(int32_t iHandle);
LIBFLIPRO_API FPROFrame_CaptureEnd(int32_t iHandle);
LIBFLIPRO_API FPROFrame_CaptureStart(int32_t iHandle, uint32_t uiFrameCount);
LIBFLIPRO_API FPROFrame_CaptureStop(int32_t iHandle);
LIBFLIPRO_API FPROFrame_CaptureThumbnail(int32_t iHandle);
LIBFLIPRO_API FPROFrame_ComputeFrameSize(int32_t iHandle);
LIBFLIPRO_VOID FPROFrame_FreeUnpackedBuffers(FPROUNPACKEDIMAGES *pUPBuffers);
LIBFLIPRO_VOID FPROFrame_FreeUnpackedStatistics(FPROUNPACKEDSTATS *pStats);
LIBFLIPRO_API FPROFrame_GetDummyPixelEnable(int32_t iHandle, bool *pEnable);
LIBFLIPRO_API FPROFrame_GetFrameType(int32_t iHandle, FPRO_FRAME_TYPE *pType);
LIBFLIPRO_API FPROFrame_GetReferenceRowPostFrameCount(int32_t iHandle, uint32_t *pNumRows);
LIBFLIPRO_API FPROFrame_GetReferenceRowPreFrameCount(int32_t iHandle, uint32_t *pNumRows);
LIBFLIPRO_API FPROFrame_GetImageDataEnable(int32_t iHandle, bool *pEnable);
LIBFLIPRO_API FPROFrame_GetTestImageEnable(int32_t iHandle, bool *pEnable, FPROTESTIMAGETYPE *pFormat);
LIBFLIPRO_API FPROFrame_GetImageArea(int32_t iHandle, uint32_t *pColOffset, uint32_t *pRowOffset, uint32_t *pWidth, uint32_t *pHeight);
LIBFLIPRO_API FPROFrame_GetPixelConfig(int32_t iHandle, uint32_t *pPixelDepth, uint32_t *pPixelLSB);
LIBFLIPRO_API FPROFrame_GetThumbnailFrame(int32_t iHandle, uint8_t *pFrameData, uint32_t *pSize);
LIBFLIPRO_API FPROFrame_GetVideoFrame(int32_t iHandle, uint8_t *pFrameData, uint32_t *pSize, uint32_t uiTimeoutMS);
LIBFLIPRO_API FPROFrame_GetVideoFrameUnpacked(int32_t iHandle, uint8_t *pFrameData, uint32_t *pSize, uint32_t uiTimeoutMS, FPROUNPACKEDIMAGES *pUPBuffers, FPROUNPACKEDSTATS *pStats);
LIBFLIPRO_API FPROFrame_GetVideoFrameExt(int32_t iHandle, uint8_t *pFrameData, uint32_t *pSize);
LIBFLIPRO_API FPROFrame_IsAvailable(int32_t iHandle, bool *pAvailable);
LIBFLIPRO_API FPROFrame_SetDummyPixelEnable(int32_t iHandle, bool bEnable);
LIBFLIPRO_API FPROFrame_SetFrameType(int32_t iHandle, FPRO_FRAME_TYPE eType);
LIBFLIPRO_API FPROFrame_SetReferenceRowPostFrameCount(int32_t iHandle, uint32_t uiNumRows);
LIBFLIPRO_API FPROFrame_SetReferenceRowPreFrameCount(int32_t iHandle, uint32_t uiNumRows);
LIBFLIPRO_API FPROFrame_SetImageDataEnable(int32_t iHandle, bool bEnable);
LIBFLIPRO_API FPROFrame_SetTestImageEnable(int32_t iHandle, bool bEnable, FPROTESTIMAGETYPE eFormat);
LIBFLIPRO_API FPROFrame_SetTrackingArea(int32_t iHandle, uint32_t uiStartRow, uint32_t uiEndRow);
LIBFLIPRO_API FPROFrame_SetTrackingAreaEnable (int32_t iHandle, uint32_t uiNumTrackingFrames);
LIBFLIPRO_API FPROFrame_SetPixelConfig(int32_t iHandle, uint32_t uiPixelDepth, uint32_t uiPixelLSB);
LIBFLIPRO_API FPROFrame_SetImageArea(int32_t iHandle, uint32_t uiColOffset, uint32_t uiRowOffset, uint32_t uiWidth, uint32_t uiHeight);
LIBFLIPRO_API FPROCtrl_GetCoolerDutyCycle(int32_t iHandle, uint32_t *pDutyCycle);
LIBFLIPRO_API FPROCtrl_GetExposure(int32_t iHandle, uint64_t *pExposureTime, uint64_t *pFrameDelay, bool *pImmediate);
LIBFLIPRO_API FPROCtrl_GetExternalTriggerEnable(int32_t iHandle, bool *pEnable, FPROEXTTRIGTYPE *pTrigType);
LIBFLIPRO_API FPROCtrl_GetFanEnable(int32_t iHandle, bool *pOn);
LIBFLIPRO_API FPROCtrl_GetGPSState(int32_t iHandle, FPROGPSSTATE *pState);
LIBFLIPRO_API FPROCtrl_GetHeaterPower(int32_t iHandle, uint32_t *pPwrPercentage);
LIBFLIPRO_API FPROCtrl_GetIlluminationDelay(int32_t iHandle, uint32_t *pOnDelay, uint32_t *pOffDelay);
LIBFLIPRO_API FPROCtrl_GetIlluminationOn(int32_t iHandle, bool *pOn);
LIBFLIPRO_API FPROCtrl_GetLED(int32_t iHandle, bool *pOn);
LIBFLIPRO_API FPROCtrl_GetLEDDuration(int32_t iHandle, uint32_t *pDurationUsec);
LIBFLIPRO_API FPROCtrl_GetSensorTemperature(int32_t iHandle, int32_t *pTemp);
LIBFLIPRO_API FPROCtrl_GetSensorTemperatureReadEnable(int32_t iHandle, bool *pEnable);
LIBFLIPRO_API FPROCtrl_GetShutterOpen(int32_t iHandle, bool *pOpen);
LIBFLIPRO_API FPROCtrl_GetShutterOverride(int32_t iHandle, bool *pOverride);
LIBFLIPRO_API FPROCtrl_GetTemperatures(int32_t iHandle, double *pAmbientTemp, double *pBaseTemp, double *pCoolerTemp);
LIBFLIPRO_API FPROCtrl_GetTemperatureSetPoint(int32_t iHandle, double *pSetPoint);
LIBFLIPRO_API FPROCtrl_SetExposure(int32_t iHandle, uint64_t uiExposureTime, uint64_t uiFrameDelay, bool bImmediate);
LIBFLIPRO_API FPROCtrl_SetExposureEx(int32_t iHandle, uint64_t uiExposureTime, uint64_t uiFrameDelay, bool bImmediate, uint64_t* pActualExposureTime, uint64_t* pActualFrameDelay);
LIBFLIPRO_API FPROCtrl_SetExternalTriggerEnable(int32_t iHandle, bool bEnable, FPROEXTTRIGTYPE eTrigType);
LIBFLIPRO_API FPROCtrl_SetFanEnable(int32_t iHandle, bool bOn);
LIBFLIPRO_API FPROCtrl_SetHeaterPower(int32_t iHandle,uint32_t uiPwrPercentage);
LIBFLIPRO_API FPROCtrl_SetIlluminationDelay(int32_t iHandle, uint16_t uiOnDelay, uint16_t uiOffDelay);
LIBFLIPRO_API FPROCtrl_SetIlluminationOn(int32_t iHandle, bool bOn);
LIBFLIPRO_API FPROCtrl_SetLED(int32_t iHandle, bool bOn);
LIBFLIPRO_API FPROCtrl_SetLEDDuration(int32_t iHandle, uint32_t uiDurationUSec);
LIBFLIPRO_API FPROCtrl_SetSensorTemperatureReadEnable(int32_t iHandle, bool bEnable);
LIBFLIPRO_API FPROCtrl_SetShutterOpen(int32_t iHandle, bool bOpen);
LIBFLIPRO_API FPROCtrl_SetShutterOverride(int32_t iHandle, bool bOverride);
LIBFLIPRO_API FPROCtrl_SetTemperatureSetPoint(int32_t iHandle, double dblSetPoint);
LIBFLIPRO_API FPROSensor_GetBinning(int32_t iHandle, uint32_t *pXBin, uint32_t *pYBin);
LIBFLIPRO_API FPROSensor_GetBinningTable(int32_t iHandle, uint32_t *pBinTable, uint32_t *pTableSizeBytes);
LIBFLIPRO_API FPROSensor_GetBlackLevelAdjust(int32_t iHandle, uint32_t *pAdjustValue);
LIBFLIPRO_API FPROSensor_GetBlackLevelAdjustEx(int32_t iHandle, FPROBLACKADJUSTCHAN eChan, uint32_t *pAdjustValue);
LIBFLIPRO_API FPROSensor_GetBlackSunAdjust(int32_t iHandle, uint32_t *pAdjustValue);